# Web_security_scanner

./: COMANDOS.md  LICENSE  README.md  installer.py  pyproject.toml
Documentacion/: ARQUITECTURA.md  CAMBIOS_MULTIIDIOMA.md  GUI.md  GUIA_USO.md  INDICE_DOCUMENTACION.md  INFORME_EJECUTIVO.md  INICIO_RAPIDO.md  INSTALACION.md  MEJORAS_v4.md  README_v4.md  RESUMEN_MEJORAS.md  SISTEMA_MULTIIDIOMA.md  SOLUCION_DEPENDENCIAS.md  TRANSFORMACION.md  requirements.txt
web_security_scanner/: PAYLOAD.py  README.md  Tecnologias.py  analytics_patterns.py  banner.py  cms_fingerprints.py  js_frameworks.py  languages.yaml  launcher_async.py  licencia.txt  redirect_payloads.py  reporte.py  scanner_v4.py  web_security_scanner.py  web_security_scanner_async.py
web_security_scanner/PAYLOAD/: README.md  payloadsAuthBypass.json  payloadsCRLF.json  payloadsCommandInjection.json  payloadsFuzzing.json  payloadsLDAP.json  payloadsLog4Shell.json  payloadsNoSQL.json  payloadsOpenRedirect.json  payloadsPathTraversal.json  payloadsSQL.json  payloadsSSRF.json  payloadsSSTI.json  payloadsXSS.json  payloadsXXE.json  payloads_master.json  subdirectorios.json  subdominios.json
web_security_scanner/core/: __init__.py  config.py  i18n.py  logger.py  scanner_core.py  scanner_core_async.py
web_security_scanner/events/: event_emitter.py
web_security_scanner/gui/: main_window.py
web_security_scanner/modules/: __init__.py  registry.py  technology_detector.py  web_mapper.py  web_mapper_async.py
web_security_scanner/reports/: web_map_20251121_024102.html  web_map_20251121_024121.html
(+21 files in other folders)
